cluster/infra/observability/kube-prometheus-stack/networkpolicies/alertmanager.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: alertmanager
  namespace: observability
spec:
  description: "Policy for alertmanager"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack-alertmanager
      app.kubernetes.io/name: alertmanager
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": observability
        - matchLabels:
            app.kubernetes.io/name: grafana
            app.kubernetes.io/instance: kube-prometheus-stack
            "k8s:io.kubernetes.pod.namespace": observability
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            app.kubernetes.io/name: kthxbye
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: hooks.slack.com
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
