cluster/infra/observability/kube-prometheus-stack/networkpolicies/egress-kube-prometheus-stack-admission-patch-job.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: egress-kube-prometheus-stack-admission-patch-job
  namespace: observability
spec:
  description: "Policy for egress-kube-prometheus-stack-admission-patch-job"
  endpointSelector:
    matchLabels:
      app: kube-prometheus-stack-admission-patch
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
