cluster/infra/observability/kube-prometheus-stack/networkpolicies/node-exporter.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: node-exporter
  namespace: observability
spec:
  description: Allow Prometheus to scrape node-exporter
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: kube-prometheus-stack
      app.kubernetes.io/name: prometheus-node-exporter
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack-prometheus
            app.kubernetes.io/name: prometheus
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
