cluster/infra/observability/kube-prometheus-stack/networkpolicies/prometheus.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: prometheus
  namespace: observability
spec:
  description: "Policy for prometheus"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/instance: kube-prometheus-stack-prometheus
  ingress:
    - fromEndpoints:
        - matchLabels:
            gateway.envoyproxy.io/owning-gateway-name: envoy-internal
            gateway.envoyproxy.io/owning-gateway-namespace: network
            "k8s:io.kubernetes.pod.namespace": network
        - matchLabels:
            app.kubernetes.io/name: grafana
            "k8s:io.kubernetes.pod.namespace": observability
        - matchLabels:
            app.kubernetes.io/name: minio
            "k8s:io.kubernetes.pod.namespace": minio
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            "k8s:io.kubernetes.pod.namespace": kube-system
      toPorts:
        - ports:
            - port: "9153" # CoreDNS metrics
              protocol: TCP
    # Kubernetes API discovery.
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
    # Host-networked Cilium agent/Hubble metrics.
    - toEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "9962" # cilium-agent metrics
              protocol: TCP
            - port: "9963" # cilium-operator metrics
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack
            app.kubernetes.io/name: prometheus-node-exporter
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "9100"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: alertmanager
            app.kubernetes.io/instance: kube-prometheus-stack-alertmanager
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "9093"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: kube-prometheus-stack
            app.kubernetes.io/name: kube-state-metrics
            "k8s:io.kubernetes.pod.namespace": observability
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
